--- a/css/styles.css
+++ b/css/styles.css
@@ -47,6 +47,9 @@ img {
 .page-header {
   background: var(--WHITE, #fff);
   border-bottom: 1px solid #e7e9fc;
+  box-shadow: 0px 1px 6px 0px rgba(46, 47, 66, 0.08),
+    0px 1px 1px 0px rgba(46, 47, 66, 0.16),
+    0px 2px 1px 0px rgba(46, 47, 66, 0.08);
 }
 .page-navigation {
   display: flex;
@@ -83,6 +86,7 @@ img {
 }
 
 .menu-link {
+  position: relative;
   color: var(--NAVY-BLUE, #2e2f42);
   font-size: 16px;
   font-weight: 500;
@@ -91,10 +95,14 @@ img {
   display: block;
   padding-top: 24px;
   padding-bottom: 24px;
+  color: #404bbf;
 }
 
-.menu-item::after {
+.menu-link::after {
+  position: absolute;
   content: "";
+  left: 0;
+  bottom: -1px;
   width: 48px;
   height: 4px;
   display: block;
@@ -131,18 +139,27 @@ img {
   display: inline-block;
   padding-top: 24px;
   padding-left: 24px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /*HERO============================*/
 
 .hero {
-  background-color: var(--NAVY-BLUE, #2e2f42);
-  background: var(--GREY, rgba(46, 47, 66, 0.7));
+  background-image: linear-gradient(
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url(../images/people-office.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  block-size: cover;
+  max-width: 1440px;
   padding-bottom: 188px;
   padding-top: 188px;
 }
 .title-hero {
   color: var(--WHITE, #ffffff);
+  text-align: center;
   font-size: 56px;
   font-weight: 700;
   line-height: 1.07;
@@ -168,6 +185,7 @@ img {
   min-width: 169px;
   height: 56px;
   border: none;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .order-button:hover,
 .order-button:focus {
@@ -225,6 +243,12 @@ img {
 .test-solutions {
   width: 264px;
 }
+.icon-image-list {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 112px;
+}
 
 /*OUR TEAM======================================*/
 
@@ -244,20 +268,24 @@ img {
   margin-bottom: 72px;
 }
 .our-team-list {
-  background-color: #ffffff;
   display: flex;
   gap: 24px;
 }
 .team-container {
-  padding: 32px 0;
+  padding-bottom: 32px;
 }
 .team-list {
+  background: var(--WHITE, #fff);
   width: calc((100%-72px) / 4);
   border-radius: 0px 0px 4px 4px;
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 .img-team {
+  display: block;
   margin-bottom: 32px;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  object-fit: contain;
 }
 .name-team {
   text-align: center;
@@ -272,19 +300,30 @@ img {
   justify-content: center;
   align-items: center;
   gap: 24px;
-  width: 232px;
-  height: 40px;
 }
 .icon-sotial-media {
   display: block;
+  justify-content: center;
+  align-items: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.icon-media {
+
+.icon-link-our-team {
+  width: 100%;
+  height: 100%;
+  background-repeat: 50%;
+  display: flex;
+}
+.icon-link-our-team:hover,
+.icon-link-our-team:focus {
+  background-color: #404bbf;
+}
+
+.icon-our-team {
+  fill: #f4f4fd;
   display: block;
-  width: 40px;
-  height: 40px;
-  flex-shrink: 0;
-  fill: #4d5ae5;
 }
+
 /*PAGE PORTFOLIO =================================*/
 
 .page-portfolio {
@@ -305,6 +344,7 @@ img {
 .image-portfolio {
   flex-basis: auto;
   width: calc((100% - 48px) / 3);
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .image-portfolio:hover {
@@ -359,6 +399,7 @@ img {
 .container-footer {
   position: relative;
   display: flex;
+  align-items: baseline;
 }
 .logo-footer {
   display: inline-block;
@@ -374,6 +415,10 @@ img {
 .web-logo {
   color: #f4f4fd;
 }
+.description-footer {
+  margin-right: 120px;
+  display: block;
+}
 .text-section-footer {
   display: block;
   color: #f4f4fd;
@@ -383,12 +428,8 @@ img {
 
 .social-media-footer {
   display: block;
-  position: absolute;
   width: 208px;
   height: 80px;
-  top: 100px;
-  left: 540px;
-  margin-bottom: 132px;
 }
 .title-footer-social {
   color: var(--WHITE, #fff);
@@ -398,10 +439,28 @@ img {
   letter-spacing: 0.02em;
   margin-bottom: 16px;
 }
-.icon-media:not(:last-child) {
+
+/* .icon-media:not(:last-child) {
   margin-right: 16px;
-}
-.social-media-list-footer {
+} */
+.social-link-footer {
   display: flex;
   gap: 16px;
+  width: 100%;
+  height: 100%;
+  border-color: #4d5ae5;
+  background-repeat: 50%;
+  align-items: center;
+  justify-content: center;
+}
+.social-link-footer:hover,
+.social-link-footer::after {
+  background-color: #31d0aa;
+}
+.icon-media {
+  display: block;
+  width: 40px;
+  height: 40px;
+  flex-shrink: 0;
+  fill: #4d5ae5;
 }
