--- a/css/styles.css
+++ b/css/styles.css
@@ -96,6 +96,7 @@ img {
   padding-top: 24px;
   padding-bottom: 24px;
   color: #404bbf;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .menu-link::after {
@@ -156,6 +157,7 @@ img {
   max-width: 1440px;
   padding-bottom: 188px;
   padding-top: 188px;
+  background-size: cover;
 }
 .title-hero {
   color: var(--WHITE, #ffffff);
@@ -248,6 +250,7 @@ img {
   align-items: center;
   justify-content: center;
   height: 112px;
+  padding: 32px 0;
 }
 
 /*OUR TEAM======================================*/
@@ -313,6 +316,8 @@ img {
   height: 100%;
   background-repeat: 50%;
   display: flex;
+  border-radius: 50%;
+  background-color: #4d5ae5;
 }
 .icon-link-our-team:hover,
 .icon-link-our-team:focus {
@@ -367,11 +372,11 @@ img {
   margin-bottom: 8px;
 }
 .overlay-marketing {
+}
+.overlay {
   width: 296px;
   height: 96px;
   color: #f4f4fd;
-}
-.overlay {
   position: absolute;
   top: 0;
   left: 0;
@@ -439,16 +444,22 @@ img {
   letter-spacing: 0.02em;
   margin-bottom: 16px;
 }
-
+.social-media-list {
+  gap: 16px;
+}
 /* .icon-media:not(:last-child) {
   margin-right: 16px;
 } */
+.icon-sotial-media {
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 .social-link-footer {
   display: flex;
   gap: 16px;
   width: 100%;
   height: 100%;
-  border-color: #4d5ae5;
+  background-color: #4d5ae5;
+  border-radius: 50%;
   background-repeat: 50%;
   align-items: center;
   justify-content: center;
@@ -462,5 +473,5 @@ img {
   width: 40px;
   height: 40px;
   flex-shrink: 0;
-  fill: #4d5ae5;
+  fill: #f4f4fd;
 }
