--- a/css/styles.css
+++ b/css/styles.css
@@ -253,7 +253,7 @@ img {
   padding: 32px 0;
 }
 
-/*OUR TEAM======================================*/
+/*OUR TEAM 3 ======================================*/
 
 .page-team {
   background: var(--CLOUD, #f4f4fd);
@@ -275,7 +275,7 @@ img {
   gap: 24px;
 }
 .team-container {
-  padding-bottom: 32px;
+  padding: 32px 0;
 }
 .team-list {
   background: var(--WHITE, #fff);
@@ -286,7 +286,6 @@ img {
 }
 .img-team {
   display: block;
-  margin-bottom: 32px;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
   object-fit: contain;
 }
@@ -309,6 +308,8 @@ img {
   justify-content: center;
   align-items: center;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  width: 40px;
+  height: 40px;
 }
 
 .icon-link-our-team {
@@ -318,6 +319,9 @@ img {
   display: flex;
   border-radius: 50%;
   background-color: #4d5ae5;
+  align-items: center;
+  justify-content: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .icon-link-our-team:hover,
 .icon-link-our-team:focus {
@@ -329,7 +333,7 @@ img {
   display: block;
 }
 
-/*PAGE PORTFOLIO =================================*/
+/*PAGE PORTFOLIO 4 =================================*/
 
 .page-portfolio {
   background: #ffffff;
@@ -383,9 +387,9 @@ img {
   background: var(--IRIS, #4d5ae5);
   width: 100%;
   height: 100%;
-  padding: 40px 32px 164px 32px;
+  padding: 40px 32px;
   transform: translateY(100%);
-  transition: transform 250ms linear;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .image-portfolio:hover .overlay {
   transform: translateY(0%);
@@ -463,9 +467,10 @@ img {
   background-repeat: 50%;
   align-items: center;
   justify-content: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .social-link-footer:hover,
-.social-link-footer::after {
+.social-link-footer:focus {
   background-color: #31d0aa;
 }
 .icon-media {
