--- a/css/styles.css
+++ b/css/styles.css
@@ -86,7 +86,6 @@ img {
 }
 
 .menu-link {
-  position: relative;
   color: var(--NAVY-BLUE, #2e2f42);
   font-size: 16px;
   font-weight: 500;
@@ -95,22 +94,18 @@ img {
   display: block;
   padding-top: 24px;
   padding-bottom: 24px;
-  color: #404bbf;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.menu-link::after {
+.current::after {
   position: absolute;
   content: "";
   left: 0;
   bottom: -1px;
-  width: 48px;
+  width: 100%;
   height: 4px;
-  display: block;
   background-color: #404bbf;
   border-radius: 2px;
-  margin-left: auto;
-  margin-right: auto;
 }
 .icon-image-list {
   border-radius: 4px;
@@ -141,6 +136,11 @@ img {
   padding-top: 24px;
   padding-left: 24px;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.current {
+  color: #404bbf;
+  position: relative;
 }
 
 /*HERO============================*/
@@ -233,7 +233,6 @@ img {
   font-weight: 500;
   line-height: 1.2;
   letter-spacing: 0.02em;
-  padding-bottom: 8px;
 }
 .text-section {
   font-size: 16px;
@@ -287,7 +286,8 @@ img {
 .img-team {
   display: block;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-  object-fit: contain;
+  object-fit: cover;
+  width: 100%;
 }
 .name-team {
   text-align: center;
@@ -342,7 +342,6 @@ img {
 }
 .list-portfolio {
   display: block;
-  padding-top: 72px;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -372,7 +371,6 @@ img {
   position: absolute;
 }
 .title-portfolio {
-  margin-top: 32px;
   margin-bottom: 8px;
 }
 .overlay-marketing {
@@ -462,7 +460,6 @@ img {
 }
 .social-link-footer {
   display: flex;
-  gap: 16px;
   width: 100%;
   height: 100%;
   background-color: #4d5ae5;
@@ -478,8 +475,7 @@ img {
 }
 .icon-media {
   display: block;
-  width: 40px;
-  height: 40px;
   flex-shrink: 0;
   fill: #f4f4fd;
 }
+
